--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Jagan Kaartik <kaartikjagan@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuid": "^9.0.0"
   }
 }
